# voice-cloner

./: .gitignore  .pre-commit-config.yaml  README.md  convert_to_standard_wav.sh  example.py  main.py  pyproject.toml  requirements.txt  test_chatterbox.py  tts_engine_base.py  tts_factory.py  vcloner.py  voice_cloner.py  voice_cloning_app.py  voice_cloning_app.spec
.github/workflows/: ci.yml
docs/: api-reference.md  architecture.md  cli-reference.md  development.md  engines.md  gui-guide.md  index.md  troubleshooting.md
engines/: __init__.py  chatterbox_engine.py  coqui_engine.py
examples/: README.md  basic_usage.py  chatterbox_demo.py
gui/: __init__.py  engine_controls.py
openspec/changes/integrate-chatterbox-tts/: design.md  proposal.md
openspec/changes/integrate-chatterbox-tts/specs/voice-cloning/: spec.md
output-examples/: .gitkeep
tests/: test_rename.py  test_voice_cloner.py
